tests/valid_inputs/assign_star.cpp
// test '*='

int main() {
	int a = 21;
	return a*=2;
}
