tests/invalid_inputs/sema/void_ptr_preincr.cpp
// test that preincrement doesn't work with void pointers

void f() {
	void *p;
	++p;
}
